--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Cache Cargo-lambda
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/cargo-lambda
+          key: expect-no-change
+
+      - name: Install cargo-lambda if not exists
+        run: |
+          if ! cargo lambda -v
+          then
+          cargo install cargo-lambda
+          npm install -g @ziglang/cli
+          fi
+
       - name: Cache Cargo registry
         uses: actions/cache@v4
         with:
@@ -20,9 +35,6 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Install cargo-lambda
-        run: cargo install cargo-lambda
 
       - name: Build Lambda
         run: |
