--- a/backend_logic/Cargo.toml
+++ b/backend_logic/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2024"
 axum = "0.8"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
-tokio = { version = "1", features = ["macros"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
