--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "rust-aws-lambda-playground"
+name = "server"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 axum = "0.8"
 backend_logic = { path = "../backend_logic" }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
