--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
-[workspace]
-members = [
-    "backend_logic",
-    "lambda",
-    "server",
-]
-resolver = "3"
+[package]
+name = "rust_aws_lambda"
+version = "0.1.0"
+edition = "2024"
+
+[dependencies]
+axum = "0.8"
+lambda_http = "0.13.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
