--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,23 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      
+      - name: Setup OpenSSL dependencies
+        run: |
+          echo '[target.aarch64-unknown-linux-gnu]' >> ~/.cargo/config.toml
+          echo 'rustflags = ["-C", "target-cpu=neoverse-n1"]' >> ~/.cargo/config.toml
 
       - name: Build Lambda
         run: |
           npm install -g @ziglang/cli
           cargo lambda build --release
+      
+      - name: Test Lambda
+        run: |
+          cargo lambda watch --release &
+          clw_pid=$!
+          curl -vf localhost:9000
+          kill $clw_pid
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
