--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,13 +42,13 @@ jobs:
       - name: Build Lambda
         run: |
           npm install -g @ziglang/cli
-          cargo lambda build --release
+          cargo lambda build --target aarch64-unknown-linux-gnu --release
       
       - name: Test Lambda
         run: |
-          cargo lambda watch --release &
+          cargo lambda watch --target aarch64-unknown-linux-gnu --release &
           clw_pid=$!
-          sleep 5
+          sleep 45
           curl -vf localhost:9000
           kill $clw_pid
 
