--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,6 @@ name: Build Lambda
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
   build-lambda:
@@ -13,18 +11,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Cache cargo-lambda
+      - name: Cache utility executables
         uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/bin/cargo-lambda
-          key: expect-no-change
+            ~/.cargo/bin/sqlx
+          key: util_exec_cargo-lamba_sqlx
 
-      - name: Install cargo-lambda if not exists
+      - name: Install utility executables if not exists
         run: |
           if ! cargo lambda --version
           then
           cargo install cargo-lambda
+          fi
+          if ! sqlx --version
+          then
+          cargo install sqlx-cli
           fi
 
       - name: Cache Cargo registry
