--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ lambda_http = "0.13.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls-aws-lc-rs"] }
