--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Build Lambda
+name: Build and Deploy Lambda
 
 on:
   push:
 
 jobs:
-  build-lambda:
+  build-and-deploy-lambda:
     runs-on: ubuntu-latest
 
     steps:
@@ -40,6 +40,8 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo
 
       - name: Setup OpenSSL dependencies
         run: |
@@ -50,6 +52,10 @@ jobs:
         run: |
           npm install -g @ziglang/cli
           cargo lambda build --target aarch64-unknown-linux-gnu --release
+
+      - name: Copy Certificates into Lambda
+        run: |
+          cp certs/* target/lambda/rust_aws_lambda/
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
