Refactor actions for util execs

--- a/.github/workflows/migrate-latest.yml
+++ b/.github/workflows/migrate-latest.yml
@@ -2,6 +2,8 @@ name: Migrate to Latest Version of DB
 
 on:
   push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -12,26 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Cache utility executables
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/cargo-lambda
-            ~/.cargo/bin/sqlx
-          key: util_exec_cargo-lamba_sqlx
-          restore-keys: |
-            util_exec
-
-      - name: Install utility executables if necessary
-        run: |
-          if ! cargo lambda --version
-          then
-          cargo install cargo-lambda
-          fi
-          if ! sqlx --version
-          then
-          cargo install sqlx-cli
-          fi
+      - uses: ./.github/workflows/get-util-execs.yml
       
       - name: Migrate DB to Latest Version
         run: |
