--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,26 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Cache utility executables
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/cargo-lambda
-            ~/.cargo/bin/sqlx
-          key: util_exec_cargo-lamba_sqlx
-          restore-keys: |
-            util_exec
-
-      - name: Install utility executables if necessary
-        run: |
-          if ! cargo lambda --version
-          then
-          cargo install cargo-lambda
-          fi
-          if ! sqlx --version
-          then
-          cargo install sqlx-cli
-          fi
+      - uses: ./.github/workflows/get-util-execs.yml
 
       - name: Cache Cargo registry
         uses: actions/cache@v4
