--- a/.github/workflows/migrate-latest.yml
+++ b/.github/workflows/migrate-latest.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - uses: ./.github/workflows/get-util-execs.yml
+      - uses: ./.github/actions/get-util-execs
       
       - name: Migrate DB to Latest Version
         run: |
