Deprecate composite action caching

--- a/.github/actions/get-util-execs/action.yml
+++ b/.github/actions/get-util-execs/action.yml
@@ -1,5 +1,5 @@
 name: Get Utility Executables
-
+# WARNING: currently does not work
 description: Provides utility executables for the project
 
 runs:
