--- a/.github/workflows/migrate-latest.yml
+++ b/.github/workflows/migrate-latest.yml
@@ -15,8 +15,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Get Utility Executables
-        uses: ./.github/actions/get-util-execs
+      - name: Cache utility executables
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/cargo-lambda
+            ~/.cargo/bin/sqlx
+          key: util_exec_cargo-lambda_sqlx
+          restore-keys: |
+            util_exec
+
+      - name: Install utility executables if necessary
+        shell: bash
+        run: |
+          if ! cargo lambda --version
+          then
+          cargo install cargo-lambda
+          fi
+          if ! sqlx --version
+          then
+          cargo install sqlx-cli
+          fi
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
