--- a/.github/workflows/migrate-latest.yml
+++ b/.github/workflows/migrate-latest.yml
@@ -49,7 +49,8 @@ jobs:
         run: |
           cp $(which sqlx) .
           chmod +x ./bootstrap
-          zip --no-extra lambda.zip bootstrap sqlx migrate.sh current_version.txt sql/*
+          man zip
+          zip -X lambda.zip bootstrap sqlx migrate.sh current_version.txt sql/*
           aws lambda update-function-code --function-name ${{ secrets.AWS_MIGRATION_LAMBDA_NAME }} --zip-file fileb://lambda.zip --publish &> /dev/null
       
       - name: Invoke AWS Lambda for Migration
