--- a/.github/workflows/migrate-latest.yml
+++ b/.github/workflows/migrate-latest.yml
@@ -22,17 +22,12 @@ jobs:
             ~/.cargo/bin/sqlx
           key: sqlx-binary-aarch64-unknown-linux-gnu
 
-      - name: Install Rust for aarch64-unknown-linux-gnu
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: aarch64-unknown-linux-gnu
-
       - name: Get sqlx binary if necessary
         run: |
           if ! stat ~/.cargo/bin/sqlx
           then
           cargo install cross
-          cross install --target aarch64-unknown-linux-gnu sqlx-cli --no-default-features --features postgres,tls-rustls-aws-lc-rs
+          cross install --target aarch64-unknown-linux-gnu sqlx-cli --no-default-features --features postgres,rustls
           fi
 
       - name: Configure AWS Credentials
