--- a/.github/workflows/migrate-latest.yml
+++ b/.github/workflows/migrate-latest.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           if ! stat ~/.cargo/bin/sqlx
           then
-          cross install --target x86_64-unknown-linux-gnu sqlx-cli --no-default-features --features postgres,rustls
+          cargo install --target x86_64-unknown-linux-gnu sqlx-cli --no-default-features --features postgres,rustls
           ldd ~/.cargo/bin/sqlx
           fi
 
