--- a/.github/workflows/migrate-latest.yml
+++ b/.github/workflows/migrate-latest.yml
@@ -31,6 +31,9 @@ jobs:
         run: |
           if ! stat ~/.cargo/bin/sqlx
           then
+          echo '[target.x86_64-unknown-linux-musl]' >> ~/.cargo/config.toml
+          echo 'linker = "musl-gcc"' >> ~/.cargo/config.toml
+          echo 'ar = "ar"' >> ~/.cargo/config.toml
           cargo install --target x86_64-unknown-linux-musl sqlx-cli --no-default-features --features postgres,rustls
           ldd ~/.cargo/bin/sqlx
           fi
@@ -53,6 +56,6 @@ jobs:
       
       - name: Invoke AWS Lambda for Migration
         run: |
-          sleep 3 # wait for a few seconds to ensure the updated lambda is ready
+          sleep 15 # wait for a few seconds to ensure the updated lambda is ready
           aws lambda invoke --function-name ${{ secrets.AWS_MIGRATION_LAMBDA_NAME }} output.json &> /dev/null
           cat output.json
