Build Rust Lambda to handle migrations

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Lambda
+name: Build and Deploy Rest API Lambda
 
 on:
   push:
@@ -14,8 +14,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Get Utility Executables
-        uses: ./.github/actions/get-util-execs
+      - name: Cache utility executables
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/cargo-lambda
+            ~/.cargo/bin/sqlx
+          key: util_exec_cargo-lambda_sqlx
+          restore-keys: |
+            util_exec
+
+      - name: Install utility executables if necessary
+        shell: bash
+        run: |
+          if ! cargo lambda --version
+          then
+          cargo install cargo-lambda
+          fi
+          if ! sqlx --version
+          then
+          cargo install sqlx-cli
+          fi
 
       - name: Cache Cargo registry
         uses: actions/cache@v4
@@ -33,7 +52,8 @@ jobs:
           echo '[target.aarch64-unknown-linux-gnu]' >> ~/.cargo/config.toml
           echo 'rustflags = ["-C", "target-cpu=neoverse-n1"]' >> ~/.cargo/config.toml
 
-      - name: Build Lambda
+      - name: Build Rest API Lambda
+        working-directory: ./rest-api
         run: |
           npm install -g @ziglang/cli
           cargo lambda build --target aarch64-unknown-linux-gnu --release
@@ -45,6 +65,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-north-1
 
-      - name: Deploy Lambda to AWS
+      - name: Deploy Rest API Lambda to AWS
+        working-directory: ./rest-api
         run: |
-          cargo lambda deploy --include certs --binary-name rust_aws_lambda lambda --enable-function-url --description "$(git log -1 --format="%h - %H - %s")"
+          cargo lambda deploy --include certs --binary-name rest-api ${{ secrets.AWS_RESTAPI_LAMBDA_NAME }} --enable-function-url --description "$(git log -1 --format="%h - %H - %s")"
