--- a/migrations/Cargo.toml
+++ b/migrations/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust_aws_lambda"
+name = "migrations"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,7 +8,5 @@ axum = "0.8"
 dotenvy = "0.15"
 env_logger = "0.11"
 lambda_http = "0.13.0"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.141"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls-aws-lc-rs"] }
