--- a/rest-api/Cargo.toml
+++ b/rest-api/Cargo.toml
@@ -11,4 +11,6 @@ lambda_http = "0.13.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls-aws-lc-rs"] }
+sqlx = { version = "0.8", features = ["macros", "runtime-tokio", "postgres", "time", "tls-rustls-aws-lc-rs"] }
+time = {version = "0.3.43", features = ["std", "alloc", "serde" ] }
+axum-macros = "0.5.0"
